@@ -1,24 +1,24 @@
-.section	.test0
-.section	.test1, "", %progbits
-.section	.test2
-.section	.test3, "aw"
-.section	.test4, "aw", %nobits
+	.section	.test0
+	.section	.test1, "", %progbits
+	.section	.test2
+	.section	.test3, "aw"
+	.section	.test4, "aw", %nobits
 
-.section	.test1, "aw", %nobits
+	.section	.test1, "aw", %nobits
 test1:	.long	test1
 
-.section	.test2, "w"
+	.section	.test2, "w"
 test2:	.long	test2
 
-.section	.test3, "aw", %progbits
+	.section	.test3, "aw", %progbits
 test3:	.long	test3
 
-.section	.test4, "aw"
+	.section	.test4, "aw"
 
-.section	.data, "a"
+	.section	.data, "a"
 
-.section	.bss, "a"
+	.section	.bss, "a"
 
-.section	.data, "aw", %nobits
+	.section	.data, "aw", %nobits
 
-.section	.bss, "aw", %progbits
+	.section	.bss, "aw", %progbits
