@@ -1,4 +1,4 @@
-.data
-.weak foo
-.long foo
-.long 0x11111111
+	.data
+	.weak foo
+	.long foo
+	.long 0x11111111
